--- a/public/game/info.html
+++ b/public/game/info.html
@@ -3,7 +3,13 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Stellar Siege — Game Info</title>
+  <base href="/game/" />
+  <title>Stellar Siege - Game Guide</title>
+  <meta
+    name="description"
+    content="Complete guide for Stellar Siege: controls, game modes, progression systems, and practical strategy tips."
+  />
+  <link rel="canonical" href="https://stellarsiege.vercel.app/game/info.html" />
   <link rel="stylesheet" href="styles.css" />
   <link rel="icon" type="image/svg+xml" href="favicon.svg" />
 </head>
@@ -23,63 +29,68 @@
       </div>
 
       <section class="infoSection">
-        <h2>What is Stellar Siege?</h2>
-        <p>Stellar Siege is a fast roguelite arena shooter. Survive waves, complete missions, and build your ship through upgrades and smarter tactics.</p>
+        <h2>What Is Stellar Siege?</h2>
+        <p>
+          Stellar Siege is a browser-based roguelite arena shooter. Each run starts simple and grows into higher pressure
+          combat through enemy scaling, objective changes, and build choices. The game is designed for quick sessions, while
+          still rewarding players who want to optimize ships and strategy over time.
+        </p>
       </section>
 
       <section class="infoSection">
-        <h2>Game Modes</h2>
+        <h2>Core Modes</h2>
         <ul>
-          <li><strong>Survival</strong> — Endless waves. Earn credits quickly.</li>
-          <li><strong>Campaign</strong> — Mission objectives and unlocks.</li>
-          <li><strong>Online Duel</strong> — Competitive matches and best rewards.</li>
+          <li><strong>Survival</strong> - Endless wave pressure, best for score pushing and credits farming.</li>
+          <li><strong>Campaign</strong> - Objective-driven missions that unlock progression and improve mechanical skill.</li>
+          <li><strong>Online Duel</strong> - Competitive mode where two players race to break the opponent hull first.</li>
         </ul>
       </section>
 
       <section class="infoSection">
-        <h2>Online Duel Win Rule</h2>
+        <h2>Controls</h2>
         <ul>
-          <li>You win when your opponent reaches 0 HP first.</li>
-          <li>Ships have <strong>YOU</strong> and <strong>OPP</strong> labels in match.</li>
-          <li>Use room code to connect two signed-in players.</li>
+          <li>Move with WASD or arrow keys.</li>
+          <li>Aim with mouse.</li>
+          <li>Shoot with left click or Space.</li>
+          <li>Use fullscreen for improved visibility on high-wave encounters.</li>
         </ul>
       </section>
 
       <section class="infoSection">
-        <h2>Ships & Roles</h2>
+        <h2>Progression Systems</h2>
         <ul>
-          <li><strong>Scout</strong> — Balanced starter ship.</li>
-          <li><strong>Striker / Ranger</strong> — Faster and stronger for wave control.</li>
-          <li><strong>Astra / Warden / Valkyrie</strong> — Premium builds with higher stats and special bonuses.</li>
+          <li><strong>Credits</strong> - Main currency earned through active gameplay and mission completion.</li>
+          <li><strong>Crystals</strong> - Premium progression currency used for selected ships and advanced upgrades.</li>
+          <li><strong>XP</strong> - Pilot progression that improves long-term account strength.</li>
+          <li><strong>Ship Upgrades</strong> - Permanent improvements that change weapon feel and survivability.</li>
         </ul>
       </section>
 
       <section class="infoSection">
-        <h2>Economy</h2>
+        <h2>Online Duel Rules</h2>
         <ul>
-          <li><strong>Credits</strong> — Earned by playing. Used for most upgrades and ships.</li>
-          <li><strong>Crystals</strong> — Rare. Used for premium ships and upgrades.</li>
-          <li><strong>XP</strong> — Increases your pilot level, boosting stats.</li>
+          <li>Both players join the same room code.</li>
+          <li>Each ship displays clear labels so players can track who is who in combat.</li>
+          <li>Win condition: reduce opponent hull to zero before your own is destroyed.</li>
         </ul>
       </section>
 
       <section class="infoSection">
-        <h2>Upgrades</h2>
-        <p>Upgrades are permanent per ship and require Google sign‑in to sync. Each upgrade increases your stats and changes your build style.</p>
-      </section>
-
-      <section class="infoSection">
-        <h2>Purchases</h2>
-        <p>Crystal packs are delivered after checkout and synced to your account. Purchases and upgrades are tied to your Google account for safety.</p>
-      </section>
-
-      <section class="infoSection">
-        <h2>Tips</h2>
+        <h2>Practical Strategy Tips</h2>
         <ul>
-          <li>Use fullscreen for the best visibility.</li>
-          <li>Strafe and kite to survive heavy waves.</li>
-          <li>Campaign missions teach different tactics.</li>
+          <li>Do not chase every target. Keep movement smooth and maintain safe firing lanes.</li>
+          <li>Use short strafes instead of long drifts to avoid overcommitting into enemy volleys.</li>
+          <li>In harder waves, prioritize threat control over score greed.</li>
+          <li>Build consistency first, then speed. Stable runs produce stronger long-term progression.</li>
         </ul>
+      </section>
+
+      <section class="infoSection">
+        <h2>Player Resources</h2>
+        <p>
+          For account, privacy, and platform details, review the legal pages:
+          <a href="/privacy.html"> Privacy Policy</a> and <a href="/terms.html">Terms of Service</a>.
+        </p>
       </section>
     </div>
   </div>
