--- a/public/privacy.html
+++ b/public/privacy.html
@@ -1,38 +1,97 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Privacy Policy - Stellar Siege</title>
+  <meta name="description" content="Privacy Policy for Stellar Siege, including data usage, account sync, analytics, ads, and payment processing." />
   <style>
-    body { font-family: Arial, sans-serif; margin: 40px; max-width: 900px; line-height: 1.5; }
+    body { font-family: Segoe UI, Tahoma, sans-serif; margin: 36px auto; max-width: 900px; padding: 0 16px; line-height: 1.65; color: #0f172a; }
     h1, h2 { margin-top: 28px; }
-    code { background: #f3f3f3; padding: 2px 6px; border-radius: 6px; }
+    .meta { color: #334155; }
+    a { color: #1d4ed8; }
+    code { background: #eef2ff; padding: 2px 6px; border-radius: 6px; }
   </style>
 </head>
 <body>
   <h1>Privacy Policy</h1>
-  <p><strong>Last updated:</strong> <span id="d"></span></p>
+  <p class="meta"><strong>Last updated:</strong> <span id="d"></span></p>
+  <p class="meta"><strong>Product:</strong> Stellar Siege (web game)</p>
 
-  <p>This is a starter privacy policy template for the demo game <strong>Stellar Siege</strong>. You must customize this for your business and jurisdiction before monetizing.</p>
+  <p>
+    This policy explains what data is processed when you use Stellar Siege, why it is processed, and what controls are
+    available to users. By using the game, you agree to this policy.
+  </p>
 
-  <h2>Data We Store</h2>
+  <h2>1. Data We Process</h2>
   <ul>
-    <li>Local game progress in your browser via <code>localStorage</code> (pilot name, credits/crystals, upgrades, local leaderboard).</li>
-    <li>If you enable Google sign-in (Firebase), we store your account identifier and cloud-save game progress in Firebase.</li>
+    <li><strong>Local gameplay data</strong> stored in your browser (for example: settings, progress, upgrades, and local scores).</li>
+    <li><strong>Account data</strong> if you choose sign-in (for example: user identifier, cloud-synced progression, and leaderboard records).</li>
+    <li><strong>Operational logs</strong> required for security, anti-abuse, and service reliability.</li>
   </ul>
 
-  <h2>Ads</h2>
-  <p>If you enable Google AdSense, Google may use cookies and/or device identifiers to serve and measure ads. You may be required to show a consent banner depending on your users' location.</p>
+  <h2>2. Why We Use Data</h2>
+  <ul>
+    <li>To run core game functionality and preserve progression between sessions.</li>
+    <li>To support optional account sync and online duel features.</li>
+    <li>To detect abuse, maintain stability, and improve gameplay quality.</li>
+  </ul>
 
-  <h2>Payments</h2>
-  <p>If you enable purchases, payments are processed by a payment provider (e.g. Lemon Squeezy). We do not store your full card details on our servers.</p>
+  <h2>3. Ads And Measurement</h2>
+  <p>
+    Ads may be served by Google services. These services can use cookies or similar identifiers to measure ad performance,
+    reduce invalid traffic, and personalize ad delivery where permitted by law. Ads are not guaranteed on every page.
+  </p>
+  <p>
+    Depending on user location, consent or additional notices may be required before personalized ads are shown.
+  </p>
 
-  <h2>Contact</h2>
-  <p>Add your support email and company name here.</p>
+  <h2>4. Payments</h2>
+  <p>
+    If purchases are enabled, payment transactions are handled by external payment processors. We do not store full payment
+    card numbers on Stellar Siege servers.
+  </p>
+
+  <h2>5. Data Retention</h2>
+  <p>
+    Browser-local data remains on your device until you clear site storage. Account-linked cloud data is retained while the
+    account is active, or longer when required for legal, fraud prevention, or security purposes.
+  </p>
+
+  <h2>6. Security</h2>
+  <p>
+    Reasonable technical and organizational safeguards are applied to protect service data. No internet service can provide
+    absolute security; users should keep their devices and browsers updated.
+  </p>
+
+  <h2>7. User Controls</h2>
+  <ul>
+    <li>You can clear browser storage to remove local saved data.</li>
+    <li>You can sign out to stop account-linked cloud sync.</li>
+    <li>You can adjust browser cookie and site-permission settings.</li>
+  </ul>
+
+  <h2>8. Children</h2>
+  <p>
+    Stellar Siege is not intended for children under the minimum age required by applicable law in your region without
+    parental or guardian involvement.
+  </p>
+
+  <h2>9. Policy Changes</h2>
+  <p>
+    This policy may be updated to reflect product, legal, or infrastructure changes. Material updates will be reflected by
+    the "Last updated" date on this page.
+  </p>
+
+  <h2>10. Contact</h2>
+  <p>
+    For privacy-related questions, contact: <a href="mailto:support@stellarsiege.com">support@stellarsiege.com</a>.
+  </p>
+
+  <p><a href="/game/index.html">Back to game</a></p>
 
   <script>
-    document.getElementById('d').textContent = new Date().toISOString().slice(0, 10);
+    document.getElementById("d").textContent = new Date().toISOString().slice(0, 10);
   </script>
 </body>
 </html>
