--- a/public/terms.html
+++ b/public/terms.html
@@ -1,35 +1,92 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Terms of Service - Stellar Siege</title>
+  <meta name="description" content="Terms of Service for Stellar Siege, including gameplay rules, virtual currency, user conduct, and liability terms." />
   <style>
-    body { font-family: Arial, sans-serif; margin: 40px; max-width: 900px; line-height: 1.5; }
+    body { font-family: Segoe UI, Tahoma, sans-serif; margin: 36px auto; max-width: 900px; padding: 0 16px; line-height: 1.65; color: #0f172a; }
     h1, h2 { margin-top: 28px; }
-    code { background: #f3f3f3; padding: 2px 6px; border-radius: 6px; }
+    .meta { color: #334155; }
+    a { color: #1d4ed8; }
   </style>
 </head>
 <body>
   <h1>Terms of Service</h1>
-  <p><strong>Last updated:</strong> <span id="d"></span></p>
+  <p class="meta"><strong>Last updated:</strong> <span id="d"></span></p>
+  <p class="meta"><strong>Product:</strong> Stellar Siege (web game)</p>
 
-  <p>This is a starter terms template for <strong>Stellar Siege</strong>. You must customize it before publishing.</p>
+  <p>
+    These Terms of Service govern access to and use of Stellar Siege. By using the game, you agree to these terms.
+    If you do not agree, do not use the service.
+  </p>
 
-  <h2>Virtual Currency</h2>
-  <p>The game may offer virtual currency (e.g. crystals) and upgrades. Virtual currency has no real-world value and is non-refundable except where required by law.</p>
+  <h2>1. Service Scope</h2>
+  <p>
+    Stellar Siege is an online browser game that may include local progression, account-based sync, leaderboards, and
+    optional online features. Feature availability may vary by region, platform, and maintenance state.
+  </p>
 
-  <h2>Fair Play</h2>
-  <p>Cheating, exploiting bugs, or attempting to manipulate rankings may result in account restrictions.</p>
+  <h2>2. Accounts</h2>
+  <ul>
+    <li>Some features require sign-in through supported identity providers.</li>
+    <li>You are responsible for maintaining the security of your account and devices.</li>
+    <li>We may suspend access to protect the platform against abuse or fraud.</li>
+  </ul>
 
-  <h2>Disclaimer</h2>
-  <p>The game is provided "as is" without warranties. To the maximum extent permitted by law, we are not liable for damages arising from use of the game.</p>
+  <h2>3. Fair Use And Conduct</h2>
+  <ul>
+    <li>No cheating, automation, exploit abuse, or manipulation of rankings.</li>
+    <li>No attempts to disrupt online matches, services, or payment systems.</li>
+    <li>No misuse of account, leaderboard, or communication mechanisms.</li>
+  </ul>
 
-  <h2>Contact</h2>
-  <p>Add your support email and company name here.</p>
+  <h2>4. Virtual Currency And Items</h2>
+  <p>
+    The game may use virtual items and currencies (for example credits and crystals). These are licensed for in-game use
+    only. They are not legal tender, have no cash value, and are not redeemable for money except where required by law.
+  </p>
+
+  <h2>5. Purchases And Billing</h2>
+  <p>
+    If paid items are offered, transactions are processed by external payment providers. Pricing, tax handling, and refund
+    eligibility can depend on local law and provider terms. Fraudulent payment activity may result in suspension.
+  </p>
+
+  <h2>6. Availability And Changes</h2>
+  <p>
+    Game balance, rewards, progression rates, and feature sets may change over time. We may also pause or discontinue parts
+    of the service for maintenance, legal, or operational reasons.
+  </p>
+
+  <h2>7. Intellectual Property</h2>
+  <p>
+    Game assets, branding, code, and design are protected by applicable intellectual property laws. You may not copy,
+    distribute, reverse engineer, or commercially exploit protected content without permission.
+  </p>
+
+  <h2>8. Disclaimers</h2>
+  <p>
+    The service is provided on an "as is" and "as available" basis. To the maximum extent allowed by law, no warranty is
+    provided that service operation will be uninterrupted, error-free, or suitable for every use case.
+  </p>
+
+  <h2>9. Limitation of Liability</h2>
+  <p>
+    To the fullest extent permitted by law, Stellar Siege operators are not liable for indirect, incidental, special, or
+    consequential damages resulting from use of the service.
+  </p>
+
+  <h2>10. Contact</h2>
+  <p>
+    For legal or account questions, contact: <a href="mailto:support@stellarsiege.com">support@stellarsiege.com</a>.
+  </p>
+
+  <p><a href="/game/index.html">Back to game</a></p>
 
   <script>
-    document.getElementById('d').textContent = new Date().toISOString().slice(0, 10);
+    document.getElementById("d").textContent = new Date().toISOString().slice(0, 10);
   </script>
 </body>
 </html>
